--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/track_travel_disruptions
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.username=sunny-law
+spring.datasource.password=QAZwsx88
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
